sources/libClangSharp/ClangSharp.h

enum CX_AtomicOperatorKind {
    CX_AO_Invalid,
#define BUILTIN(ID, TYPE, ATTRS)
#define ATOMIC_BUILTIN(ID, TYPE, ATTRS) CX_AO##ID,
#include <clang/Basic/Builtins.inc>
};
enum CX_AttrKind {
    CX_AttrKind_Invalid,
#define ATTR(X) CX_AttrKind_##X,
#define ATTR_RANGE(CLASS, FIRST_NAME, LAST_NAME) CX_AttrKind_First##CLASS = CX_AttrKind_##FIRST_NAME, CX_AttrKind_Last##CLASS = CX_AttrKind_##LAST_NAME,
#include <clang/Basic/AttrList.inc>
};
enum CX_CapturedRegionKind {
    CX_CR_Invalid,
    CX_CR_Default = clang::CR_Default + 1,
    CX_CR_ObjCAtFinally = clang::CR_ObjCAtFinally + 1,
    CX_CR_OpenMP = clang::CR_OpenMP + 1,
};
enum CX_VariableCaptureKind {
    CX_VCK_Invalid,
    CX_VCK_This = clang::CapturedStmt::VCK_This + 1,
    CX_VCK_ByRef = clang::CapturedStmt::VCK_ByRef + 1,
    CX_VCK_ByCopy = clang::CapturedStmt::VCK_ByCopy + 1,
    CX_VCK_VLAType = clang::CapturedStmt::VCK_VLAType + 1
};
LLVM_CLANG_C_EXTERN_C_BEGIN
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getArgument(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getAllocate(CXCursor C);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getAsmString(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getAsmStringExpr(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getArgumentType(CXCursor C);
CLANGSHARP_LINKAGE int64_t clangsharp_Cursor_getArraySize(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getAssociatedConstraint(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getAsFunction(CXCursor C);
CLANGSHARP_LINKAGE CX_AtomicOperatorKind clangsharp_Cursor_getAtomicOpcode(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getAttr(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CX_AttrKind clangsharp_Cursor_getAttrKind(CXCursor C);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getAttrSpelling(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getAvailabilityAttributeDeprecated(CXCursor, llvm::VersionTuple* version);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getAvailabilityAttributeIntroduced(CXCursor, llvm::VersionTuple* version);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getAvailabilityAttributeMessage(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getAvailabilityAttributeObsoleted(CXCursor, llvm::VersionTuple* version);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getAvailabilityAttributePlatformIdentifierName(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getAvailabilityAttributeUnavailable(CXCursor);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getBase(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXBinaryOperatorKind clangsharp_Cursor_getBinaryOpcode(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getBindingDecl(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getBindingExpr(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getBitWidth(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getBlockManglingContextDecl(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getBlockManglingNumber(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getBlockMissingReturnType(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getBody(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getCallResultType(CXCursor C);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getClobber(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCanAvoidCopyToHeap(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getCanonical(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getCaptureCopyExpr(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getCapturedVar(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CX_VariableCaptureKind clangsharp_Cursor_getCaptureKind(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCaptureHasCopyExpr(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCaptureIsByRef(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCaptureIsEscapingByRef(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCaptureIsNested(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCaptureIsNonEscapingByRef(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getCapturedDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getCapturedRecordDecl(CXCursor C);
CLANGSHARP_LINKAGE CX_CapturedRegionKind clangsharp_Cursor_getCapturedRegionKind(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getCapturedStmt(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCapturesCXXThis(CXCursor C);